# azure-functions-rs

./: README.md
azure-functions/: Cargo.toml
azure-functions-codegen/: Cargo.toml
azure-functions-codegen/src/: export.rs
azure-functions-codegen/src/func/: invoker.rs
azure-functions-durable/: Cargo.toml
azure-functions-durable/src/: client.rs
azure-functions-sdk/: Cargo.toml
azure-functions-sdk/src/: main.rs
azure-functions-sdk/src/commands/: new.rs  new_app.rs  run.rs
azure-functions-sdk/src/commands/new/: activity.rs  blob.rs  cosmos_db.rs  event_grid.rs  event_hub.rs  http.rs  orchestration.rs  queue.rs  service_bus.rs  timer.rs
azure-functions-shared/: Cargo.toml
azure-functions-shared-codegen/: Cargo.toml
azure-functions-shared/cache/: azure_functions_rpc_messages.rs
azure-functions/src/commands/: init.rs  run.rs  sync_extensions.rs
examples/blob/: Cargo.toml
examples/cosmosdb/: Cargo.toml
examples/durable-functions/: Cargo.toml
examples/event-grid/: Cargo.toml
examples/event-hub/: Cargo.toml
examples/generic/: Cargo.toml
examples/http/: Cargo.toml
examples/queue/: Cargo.toml
examples/service-bus/: Cargo.toml
examples/signalr/: Cargo.toml
examples/table/: Cargo.toml
examples/timer/: Cargo.toml
