[package]
name = "azure-functions-codegen"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust code generation support"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
azure-functions-shared = { version = "0.11.0", path = "../azure-functions-shared" }
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"] }
proc-macro2 = "1.0.40"

[features]
unstable = ["azure-functions-shared/unstable"]
