[package]
name = "azure-functions-durable"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Durable Functions for Rust"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
hyper = { version = "0.14.19", features = ["client", "http2", "stream", "tcp"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = "1.19.2"
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.2.2"
log = "0.4.17"
futures-util = "0.3.21"

[dev-dependencies]
mockito = "0.31.0"
