[package]
name = "azure-functions-sdk"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust Developer Tools"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[[bin]]
name = "cargo-func"
path = "src/main.rs"

[dependencies]
colored = "2.0.0"
clap = "3.2.6"
atty = "0.2.14"
handlebars = "4.3.1"
serde_json = "1.0.81"
tempdir = "0.3.7"
regex = "1.5.6"
syn = { version = "1.0.98", features = ["full", "extra-traits"] }
lazy_static = "1.4.0"
ctrlc = "3.2.2"
