[package]
name = "azure-functions-shared"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Implementations shared between the azure-functions-codegen and azure-functions crates."
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
azure-functions-shared-codegen = { version = "0.11.0", path = "../azure-functions-shared-codegen" }
tonic = "0.7.2"
prost = "0.10.4"
prost-types = "0.10.1"
bytes = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"] }
proc-macro2 = "1.0.40"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.7.2"

[features]
default = []
compile_protobufs = []
unstable = ["azure-functions-shared-codegen/unstable"]
