[package]
name = "azure-functions"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Azure Functions for Rust"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
azure-functions-shared = { version = "0.11.0", path = "../azure-functions-shared" }
azure-functions-codegen = { version = "0.11.0", path = "../azure-functions-codegen" }
azure-functions-durable = { version = "0.11.0", path = "../azure-functions-durable" }
http = "0.2.8"
tonic = "0.7.2"
log = { version = "0.4.17", features = ["std"] }
futures-preview = "0.3.0-alpha.19"
clap = "3.2.6"
tokio = "1.19.2"
tokio-executor = "0.2.0-alpha.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_repr = "0.1.8"
chrono = { version = "0.4.19", features = ["serde"] }
xml-rs = "0.8.4"
lazy_static = "1.4.0"
tempfile = "3.3.0"
ctrlc = "3.2.2"
backtrace = "0.3.65"
fs_extra = "1.2.0"
semver = "1.0.10"
sha1 = "0.10.1"
uuid = { version = "1.1.2", features = ["v5"] }

[features]
unstable = ["azure-functions-codegen/unstable", "azure-functions-shared/unstable"]

[dev-dependencies]
matches = "0.1.9"
